--- a/20230904-KiyoshiWoolheater-NYCSchools/Base.lproj/Main.storyboard
+++ b/20230904-KiyoshiWoolheater-NYCSchools/Base.lproj/Main.storyboard
@@ -1,24 +1,158 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="wYs-h8-mcd">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Navigation Controller-->
+        <scene sceneID="2qx-JE-fVO">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <navigationController id="wYs-h8-mcd" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="JEG-iU-K5O">
+                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="YWs-LX-e3Y" kind="relationship" relationship="rootViewController" id="p5z-Tb-yM1"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="CjF-to-9oF" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-792" y="20"/>
+        </scene>
+        <!--Directory Table View Controller-->
+        <scene sceneID="ZL7-fy-lxP">
+            <objects>
+                <tableViewController storyboardIdentifier="directoryTableViewController" id="YWs-LX-e3Y" customClass="DirectoryTableViewController" customModule="_0230904_KiyoshiWoolheater_NYCSchools" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" id="Mqy-oC-1Fz">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="schoolNameCell" rowHeight="99" id="rgc-xf-58a" customClass="SchoolNameCell" customModule="_0230904_KiyoshiWoolheater_NYCSchools" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="50" width="393" height="99"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="rgc-xf-58a" id="U3V-Qg-lYC">
+                                    <rect key="frame" x="0.0" y="0.0" width="393" height="99"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QUH-Nl-pcS">
+                                            <rect key="frame" x="8" y="8" width="358" height="83"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="chevron.right" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="eMR-WC-JPc">
+                                            <rect key="frame" x="374" y="10" width="11" height="79.333333333333329"/>
+                                            <color key="tintColor" systemColor="labelColor"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="11" id="xNz-j9-dNb"/>
+                                            </constraints>
+                                        </imageView>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="QUH-Nl-pcS" firstAttribute="leading" secondItem="U3V-Qg-lYC" secondAttribute="leading" constant="8" id="3zp-mC-nqN"/>
+                                        <constraint firstItem="eMR-WC-JPc" firstAttribute="leading" secondItem="QUH-Nl-pcS" secondAttribute="trailing" constant="8" id="7ms-XF-JSw"/>
+                                        <constraint firstItem="eMR-WC-JPc" firstAttribute="top" secondItem="U3V-Qg-lYC" secondAttribute="top" constant="8" id="Po0-Wt-opu"/>
+                                        <constraint firstItem="QUH-Nl-pcS" firstAttribute="top" secondItem="U3V-Qg-lYC" secondAttribute="top" constant="8" id="Unl-W8-USK"/>
+                                        <constraint firstAttribute="bottom" secondItem="eMR-WC-JPc" secondAttribute="bottom" constant="8" id="ntD-ia-u2E"/>
+                                        <constraint firstAttribute="trailing" secondItem="eMR-WC-JPc" secondAttribute="trailing" constant="8" id="qTA-mh-DPt"/>
+                                        <constraint firstAttribute="bottom" secondItem="QUH-Nl-pcS" secondAttribute="bottom" constant="8" id="xwn-Tk-RJW"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="name" destination="QUH-Nl-pcS" id="jIU-zw-bDa"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="YWs-LX-e3Y" id="PXd-Ku-Qj5"/>
+                            <outlet property="delegate" destination="YWs-LX-e3Y" id="vtX-EI-m2K"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="wjL-oq-Emz"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="cgn-Ir-vsB" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="29.770992366412212" y="20.422535211267608"/>
+        </scene>
+        <!--School Detail View Controller-->
+        <scene sceneID="Rzp-6k-GVe">
+            <objects>
+                <viewController storyboardIdentifier="schoolDetailViewController" id="E1l-iO-rLK" customClass="SchoolDetailViewController" customModule="_0230904_KiyoshiWoolheater_NYCSchools" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="NV6-91-UNy">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="18" translatesAutoresizingMaskIntoConstraints="NO" id="aHa-sa-l2T">
+                                <rect key="frame" x="8" y="67" width="377" height="702"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9DL-0C-bmY">
+                                        <rect key="frame" x="0.0" y="0.0" width="377" height="126"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HXX-Jh-dso">
+                                        <rect key="frame" x="0.0" y="144" width="377" height="126"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="x4P-0U-UwL">
+                                        <rect key="frame" x="0.0" y="288" width="377" height="126"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6xH-Qj-SXw">
+                                        <rect key="frame" x="0.0" y="432" width="377" height="126"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ro8-gj-DxE">
+                                        <rect key="frame" x="0.0" y="576" width="377" height="126"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="jKQ-c5-Jwv"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="aHa-sa-l2T" firstAttribute="top" secondItem="jKQ-c5-Jwv" secondAttribute="top" constant="8" id="abD-mX-Nql"/>
+                            <constraint firstItem="jKQ-c5-Jwv" firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="aHa-sa-l2T" secondAttribute="bottom" constant="8" id="fLw-5N-6r9"/>
+                            <constraint firstItem="jKQ-c5-Jwv" firstAttribute="trailing" secondItem="aHa-sa-l2T" secondAttribute="trailing" constant="8" id="mRN-bi-1QQ"/>
+                            <constraint firstItem="aHa-sa-l2T" firstAttribute="leading" secondItem="jKQ-c5-Jwv" secondAttribute="leading" constant="8" id="rQS-Gz-f6r"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="numOfSatTakers" destination="HXX-Jh-dso" id="wat-yc-NST"/>
+                        <outlet property="satCriticalReadingAvgScore" destination="x4P-0U-UwL" id="IR3-5b-ng4"/>
+                        <outlet property="satMathAvgScore" destination="6xH-Qj-SXw" id="4Il-XT-KgV"/>
+                        <outlet property="satWritingAvgScore" destination="ro8-gj-DxE" id="CmX-Fa-KTm"/>
+                        <outlet property="schoolName" destination="9DL-0C-bmY" id="zfv-uN-4q7"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="xSK-fc-zXp" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="978" y="20"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="chevron.right" catalog="system" width="97" height="128"/>
+        <systemColor name="labelColor">
+            <color red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
